- add ApiController - add Template Api (/!\ need to fix map issue) - add Entity Station - edit routes.yaml - Recuperation Api BDD

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -3,3 +3,9 @@ controllers:
         path: ../src/Controller/
         namespace: App\Controller
     type: attribute
+
+# config/routes.yaml
+
+api_fetch:
+    path: /api/velib
+    controller: App\Controller\ApiController::fetchVelibData
