- implementation mock API

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,9 @@
 services:
+  mock-veliko-api:
+    container_name: mock-veliko-api
+    image: bfoujols/mock-veliko-api:latest
+    ports:
+      - "9042:80"
   database:
     container_name: BTS-SIO-G2-2025-VELIKO-WEB-database
     image: mariadb:latest
