utilisation of new ApiVeliko : - class Request.php - edit controller/index Api - edit route /api/velib to / - delete Entity station

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -7,5 +7,5 @@ controllers:
 # config/routes.yaml
 
 api_fetch:
-    path: /api/velib
-    controller: App\Controller\ApiController::fetchVelibData
+    path: /
+    controller: App\Controller\ApiController::fetchVelikoData
