--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "symfony/validator": "6.4.*",
         "symfony/yaml": "6.4.*",
         "twig/extra-bundle": "^2.12|^3.0",
-        "twig/twig": "^2.12|^3.0"
+        "twig/twig": "^2.12|^3.0",
+      "ext-curl": "*"
     },
     "config": {
         "allow-plugins": {
