--- a/.env
+++ b/.env
@@ -29,3 +29,12 @@ APP_SECRET=7207d4d33911dd8b8725c80cdc3306ce
 DATABASE_URL="mysql://root:root@127.0.0.1:3306/app_db?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+# .env
+
+# URL de l'API pour récupérer les stations
+API_VELIKO_URL='http://localhost:9042'
+
+# Port api veliko
+API_VELIKO_PORT='9042'
+
