-Création d'un lien demandant une validation par Email pour la création de compte

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -6,4 +6,8 @@ controllers:
 
 # config/routes.yaml
 
+app_confirm_email:
+    path: /confirm-email/{token}
+    controller: App\Controller\EmailConfirmationController::confirmEmail
+
 
