--- a/.env-exemple
+++ b/.env-exemple
@@ -38,3 +38,6 @@ API_VELIKO_URL='http://localhost:9042'
 # Port api veliko
 API_VELIKO_PORT='9042'
 
+###> symfony/mailer ###
+MAILER_DSN="smtp://localhost:1025"
+###< symfony/mailer ###
