--- a/.env-exemple
+++ b/.env-exemple
@@ -26,7 +26,7 @@ APP_SECRET=7207d4d33911dd8b8725c80cdc3306ce
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
-DATABASE_URL="mysql://root:root@127.0.0.1:3306/app_db?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
+DATABASE_URL="mysql://root:password@127.0.0.1:3306/app_db?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
@@ -38,3 +38,6 @@ API_VELIKO_URL='http://localhost:9042'
 # Port api veliko
 API_VELIKO_PORT='9042'
 
+###> symfony/mailer ###
+MAILER_DSN="smtp://localhost:1025"
+###< symfony/mailer ###
