--- a/.env-example
+++ b/.env-example
@@ -1,3 +1,5 @@
+# .env-exemple
+
 # In all environments, the following files are loaded if they exist,
 # the latter taking precedence over the former:
 #
@@ -16,28 +18,26 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-
-APP_SECRET=7207d4d33911dd8b8725c80cdc3306ce
+APP_SECRET=your-app-secret # Changez ceci pour un secret unique pour votre environnement local
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-#
-# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-# DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
-DATABASE_URL="mysql://root:password@127.0.0.1:3306/app_db?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
-# DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
+
+# Pour une base de données MySQL (changer ces informations)
+DATABASE_URL="mysql://username:password@localhost:3306/database_name?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
+# Si vous utilisez PostgreSQL :
+# DATABASE_URL="postgresql://username:password@localhost:5432/database_name?serverVersion=16&charset=utf8"
+
 ###< doctrine/doctrine-bundle ###
 
-# .env
-
 # URL de l'API pour récupérer les stations
-API_VELIKO_URL='http://localhost:9042'
+API_VELIKO_URL='http://localhost:9042' # Changez ceci en fonction de l'URL de l'API que vous utilisez
 
-# Port api veliko
-API_VELIKO_PORT='9042'
+# Port API Veliko
+API_VELIKO_PORT='9042' # Changez le port si nécessaire
 
 ###> symfony/mailer ###
-MAILER_DSN="smtp://localhost:1025"
+MAILER_DSN="smtp://localhost:1025" # Mettez ici vos informations de connexion pour le serveur SMTP
 ###< symfony/mailer ###
