--- a/.env-example
+++ b/.env-example
@@ -18,7 +18,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=your-app-secret # Changez ceci pour un secret unique pour votre environnement local
+APP_SECRET=your-app-secret # Changez ceci pour un secret unique pour votre environnement local (ex : APP_SECRET=7207d4d33911dd8b8)
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
