Edit .env-example whit prod environnement

--- a/.env-example
+++ b/.env-example
@@ -17,7 +17,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
+APP_ENV=prod
 APP_SECRET=your-app-secret # Changez ceci pour un secret unique pour votre environnement local (ex : APP_SECRET=7207d4d33911dd8b8)
 ###< symfony/framework-bundle ###
 
